Changelog
=========

1.2.3 (unreleased)
------------------

* Removed type 'Folder' from Collage properties -> types whitelist. It does not
  make much sense (and will confuse users) to add a folder direct inside a 
  Collage. if someone really needs it, it can be enabled with minor effort.
  [jensens]

* Made Collage fields: show_title, show_description and index_subobjects 
  languageIndependent.
  [jensens]

* Fixed deprecated URL for add on packages (third party content types)
  in the doc.
  [glenfant]

1.2.2 (2009-06-07)
------------------

* A UID can start with numbers. The value of the id attribute cannot start
  with a number by naming convention. The views now use:
  string:title-${view/getUniqueIdentifier}, which always starts with a t
  [jladage]

* Don't render empty descriptions in standard document.
  [jensens]

* In Plone 3 the contributor is the one adding content. So default roles for
  "Add Collage content" is now Contributor, additional to Owner & Manager.

* Don't assume that a view is always available: added error view as fallback.
  It helps a lot in development and doesn't expose ugly tracebacks to users  
  if site has a configuration problem. Also minor cleanup and fixed tests.
  [jensens]

* Added confirmation-popup for delete/remove action. 
  [jensens]

* Make viewlets following all the same paradigm.  
  Reorder them according to usability thought. Turn expandable content into
  overlayed box.
  [jensens]

* Turn add row into menu. Fix circular import problem instead ugly workaround.
  [jensens]

* Added upgrade step to 1.2.2 that adds the alias whitelist property, without
  which the control panel crashes.
  [glenfant]

* Synched all .po files following jensens's changes and added french
  missing labels.
  [glenfant]

* Make a difference between types to be added to Collage and types 
  enabled for alias. This introduces a new whitelist in controlpanel.  
  [jensens]
