@@ -1,0 +1,20 @@
+<tal:manager replace="structure provider:collage.ContentManager" />
+<div class="file-minimal"
+     tal:define="unit view/getBUFile;
+                 size unit/get_size | python:unit and len(unit) or 0;
+                 icon unit/getBestIcon | nothing;
+                 filename unit/filename | nothing">
+
+    <a href="" tal:attributes="href string:${here/absolute_url}/at_download/file">
+      <img tal:condition="icon" src=""
+           tal:attributes="src string:${here/portal_url}/$icon" />
+      <tal:filename tal:replace="context/Title" />
+    </a>
+    <br />
+    <span class="discreet">
+        <span i18n:translate=""
+              i18n:domain="archetypes" 
+              tal:replace="python:context.lookupMime(context.getField('file').getContentType(here))">ContentType</span>,
+        <tal:size content="python:'%sKb' % (size / 1024)">0Kb</tal:size>
+    </span>
+</div>
